# gl-player

./: .gitignore  CMakeLists.txt  commentdock.cpp  commentdock.h  fileformat.cpp  fileformat.h  gl-percolation.pro  gl-percolation.qrc  glwidget.cpp  glwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  playbackslider.cpp  playbackslider.h  simulationthread.cpp  simulationthread.h  timeplot.cpp  timeplot.h  visframe.cpp  visframe.h
